# tmux-config

./: .gitignore  Cargo.toml  README.md  install.sh  tmux.conf
src/: client.rs  daemon.rs  git.rs  main.rs  render.rs  server.rs  state.rs  utils.rs
src/collectors/: docker.rs  mod.rs  ollama.rs  ports.rs  ram.rs  services.rs
