[package]
name    = "tmuxd"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tmuxd"
path = "src/main.rs"

[dependencies]
tokio      = { version = "1", features = ["full"] }
anyhow     = "1"
serde = {version = "1.0.228", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
git2 = "0.19"
serde_yaml = "0.9"
netstat2 = "0.9"
reqwest    = { version = "0.12", default-features = false, features = ["json"] }
